--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,12 @@ header img{
 }
 
 .primerSeccion__articulo img {
+  width: 20rem;
+  height: 25rem;
+  transition: all 1s;
+}
+
+.primerSeccion__articulo img:hover{
   width: 25rem;
   height: 30rem;
 }
@@ -356,6 +362,7 @@ header img{
 
 .productos article:hover {
   background-color: rgba(110, 161, 76, 0.205);
+  color: white;
 }
 
 .productos img {
@@ -376,10 +383,10 @@ header img{
 /*Contacto*/
 
 .contacto {
-  background-color: rgba(123, 209, 66, 0.336);
+  background: linear-gradient(to right, #56b4d3e7, #348f4fe3);
   padding: 1rem;
   font-family: "Changa", sans-serif;
-  color: #5c855c;
+  color: #ddf1e0;
 }
 .contacto__titulo {
   font-size: 3.5rem;
