--- a/css/style.css
+++ b/css/style.css
@@ -544,6 +544,91 @@ footer a {
 }
 
 /*Index */
+
+@media (max-width: 768px){
+  .seccionCentral{
+    border: solid red;
+    padding: 0.5rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto;
+    grid-template-areas: "variedad variedad"
+    "noticias dato"
+    "podio podio" ;
+  }
+
+  .seccionCentral {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: auto auto;
+    gap: 0.5rem;
+    grid-template-areas:
+      "variedad noticias"
+      "podio dato";
+  }
+  
+  .primerSeccion {
+    background-color: rgba(123, 209, 66, 0.336);
+    text-align: center;
+    grid-area: variedad;
+  }
+  
+  .primerSeccion__elegida{
+    background-color: rgba(123, 209, 66, 0.336);
+  
+  
+  }
+  
+  .primerSeccion h5 {
+    font-family: "Changa", sans-serif;
+    color: #5c855c;
+    text-decoration: underline;
+    font-size: 4rem;
+  }
+  
+  
+  .primerSeccion img {
+    width: 15rem;
+    height: 20rem;
+    transition: all 2s;
+    margin: 1rem;
+  }
+  
+  .primerSeccion img:hover{
+    width: 25rem;
+    height: 25rem;
+  }
+  
+  .primerSeccion p {
+    padding: 1rem;
+    font-family: "Changa", sans-serif;
+    font-size: 1.2rem;
+    font-style: italic;
+    font-weight: lighter;
+  }
+  
+  .primerSeccion__lista {
+    color: #5c855c;
+    font-family: "Changa", sans-serif;
+    background-color: #f1fff0;
+    padding: 1rem;
+    margin: 1.5rem;
+  }
+  
+  .primerSeccion__lista h2 {
+    font-size: 2rem;
+    text-decoration: underline;
+  }
+  
+  .primerSeccion__lista ul li {
+    font-size: 1.5rem;
+    list-style-type: none;
+    background-color: rgba(123, 209, 66, 0.151);
+  }
+
+}
+
+
 /*@media (max-width: 768px) {
     .secciones {
       border: solid red;
