--- a/scss/_cannabisMed.scss
+++ b/scss/_cannabisMed.scss
@@ -67,10 +67,19 @@
       font-size: 1.2rem;
       margin: 1rem;
     }
+    img{
+      width: 30rem;
+    }
   }
   h2 {
     font-size: 2.5rem;
     text-decoration: underline;
     margin: 1rem;
+  }
+  div{
+    iframe {
+      width: 50rem;
+      height: 30rem;
+    }
   }
 }
