--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,10 +1,15 @@
 .contacto {
-  background: linear-gradient(to right, #56b4d3e7, #348f4fe3);
+  background: linear-gradient(
+    to left,
+    rgba(123, 209, 66, 0.493),
+    ivory,
+    rgba(123, 209, 66, 0.493),
+    ivory
+  );
   padding: 1rem;
   font-family: "Changa", sans-serif;
-  color: #ddf1e0;
+  color: #5c855c;
   .contacto__titulo {
-    font-size: 3.5rem;
     padding: 1rem;
     text-align: start;
   }
@@ -24,7 +29,6 @@
       flex-direction: column;
       width: 100%;
       input {
-        width: 100%;
         height: 1.5rem;
       }
       .newsletter {
@@ -33,13 +37,7 @@
         justify-content: space-around;
         margin: 1rem;
       }
-      .contacto__formulario__botones input {
-        width: 32%;
-        background-color: #5c855c;
-        border-radius: 150px;
-        color: white;
-        font-family: "Changa", sans-serif;
-      }
+      
     }
   }
 }
