--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,10 +1,11 @@
 .contacto {
-  background: linear-gradient(
-    to left,
-    rgba(123, 209, 66, 0.493),
-    ivory,
-    rgba(123, 209, 66, 0.493),
-    ivory
+  background-image: linear-gradient(
+    to right top,
+    #c9ead0,
+    #bdebc5,
+    #b1edba,
+    #a5edae,
+    #9aeea1
   );
   padding: 1rem;
   font-family: "Changa", sans-serif;
