--- a/scss/_guias.scss
+++ b/scss/_guias.scss
@@ -1,9 +1,15 @@
 .instructivo {
   color: #5c855c;
   font-family: "Changa", sans-serif;
-  background-color: #f1fff0;
   padding: 1rem;
   display: flex;
+  background: linear-gradient(
+    to left,
+    rgba(123, 209, 66, 0.493),
+    ivory,
+    rgba(123, 209, 66, 0.493),
+    ivory
+  );
   border: 0.5rem double #4f991e;
   .instructivo__manual {
     h1 {
@@ -43,14 +49,15 @@
     margin-bottom: 1rem;
     padding: 1rem;
     font-weight: bold;
-    background-image: url(https://previews.123rf.com/images/julydfg/julydfg1211/julydfg121100093/16529053-verde-marihuana-hojas-de-fondo-vector-ilustraci%C3%B3n-.jpg);
-    background-position: center;
+    background-color: #f1fff0;
     button {
       margin: 0.5rem;
     }
   }
   .card-header.titulo {
-    background-color: rgba(123, 209, 66, 0.336);
+    background-color: rgba(123, 209, 66, 0.541);
     color: #447444;
+    font-family: "Changa", sans-serif;
+
   }
 }
